--- a/lab02.ipynb
+++ b/lab02.ipynb
@@ -12,6 +12,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Alunos:**\n",
+    "\n",
+    "João Victor Santos Brito Ferreira - 202207040028\n",
+    "\n",
+    "Kauan Miranda Tavares - 202206840033\n",
+    "\n",
+    "Marco Antônio do Espírito Santo Maués Junior - 202206840038"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## O problema:"
    ]
   },
