adição de observações pertinentes e explicação do tratamento dos dados

--- a/lab02.ipynb
+++ b/lab02.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "max    252.000000   31.060000"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -293,84 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Dominos' 'EagleBoys']\n",
-      "['ThinNCrispy' 'DeepPan' 'ClassicCrust' 'MidCrust' 'ThinCrust']\n",
-      "['Supreme' 'BBQMeatlovers' 'Hawaiian' 'SuperSupremo']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(data_pizza['Store'].unique())\n",
-    "print(data_pizza['CrustDescription'].unique())\n",
-    "print(data_pizza['Topping'].unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Dominos' 'EagleBoys']\n",
-      "['Thin' 'DeepPan' 'Mid']\n",
-      "['Supreme' 'BBQMeatlovers' 'Hawaiian']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Substituir valores  ################# FALAR DO TRATAMENTO DE DADOS\n",
-    "data_pizza['CrustDescription'] = data_pizza['CrustDescription'].replace({\n",
-    "    'ClassicCrust': 'Mid',\n",
-    "    'MidCrust': 'Mid',\n",
-    "    'ThinNCrispy': 'Thin',\n",
-    "    'ThinCrust': 'Thin'\n",
-    "})\n",
-    "\n",
-    "data_pizza['Topping'] = data_pizza['Topping'].replace({\n",
-    "    'Supreme': 'Supreme',\n",
-    "    'SuperSupremo': 'Supreme'\n",
-    "})\n",
-    "\n",
-    "# Verificar as alterações\n",
-    "print(data_pizza['Store'].unique())\n",
-    "print(data_pizza['CrustDescription'].unique())\n",
-    "print(data_pizza['Topping'].unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Dominos' 'EagleBoys']\n",
-      "['Thin' 'DeepPan' 'Mid']\n",
-      "['Supreme' 'BBQMeatlovers' 'Hawaiian']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(data_pizza['Store'].unique())\n",
-    "print(data_pizza['CrustDescription'].unique())\n",
-    "print(data_pizza['Topping'].unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +324,134 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $II$. Será que a alegação da pizzaria EagleBoys tem alguma base?\n"
+    "Acima podemos ver que não há nenhum dado faltante ou valor nulo para as as variáveis em questão."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Dominos' 'EagleBoys']\n",
+      "['ThinNCrispy' 'DeepPan' 'ClassicCrust' 'MidCrust' 'ThinCrust']\n",
+      "['Supreme' 'BBQMeatlovers' 'Hawaiian' 'SuperSupremo']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data_pizza['Store'].unique())\n",
+    "print(data_pizza['CrustDescription'].unique())\n",
+    "print(data_pizza['Topping'].unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Na saída acima vemos as classes das variáveis categóricas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $II$. Tratamento de dados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fazendo uma leitura do `data/pizzasize.txt`, mais especificamente na seção `SPECIAL NOTES` descobrimos que os tipos de massa `'ClassicCrust'` e `'MidCrust'` referem-se ao mesmo tipo de massa porém com os nomes específicos que recebem em cada pizzaria, continuando a leitura do trecho descobrimos que o mesmo vale para as massas `'ThinNCrispy'` e `'ThinCrust'` e para os sabores `'Supreme'` e `'SuperSupremo'`.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por conta disso, faz-se necessário um tratamento nos dados, aglutinando as classes que correspondem a mesma coisa, porém com nomes diferentes, na célula de código abaixo realizamos essa aglutinação:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Dominos' 'EagleBoys']\n",
+      "['Thin' 'DeepPan' 'Mid']\n",
+      "['Supreme' 'BBQMeatlovers' 'Hawaiian']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Substituir valores \n",
+    "data_pizza['CrustDescription'] = data_pizza['CrustDescription'].replace({\n",
+    "    'ClassicCrust': 'Mid',\n",
+    "    'MidCrust': 'Mid',\n",
+    "    'ThinNCrispy': 'Thin',\n",
+    "    'ThinCrust': 'Thin'\n",
+    "})\n",
+    "\n",
+    "data_pizza['Topping'] = data_pizza['Topping'].replace({\n",
+    "    'Supreme': 'Supreme',\n",
+    "    'SuperSupremo': 'Supreme'\n",
+    "})\n",
+    "\n",
+    "# Verificar as alterações\n",
+    "print(data_pizza['Store'].unique())\n",
+    "print(data_pizza['CrustDescription'].unique())\n",
+    "print(data_pizza['Topping'].unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agora há apenas 3 valores/classes possíveis para as colunas `Topping` e `CrustDescription` e as análises posteriores podem ser vistas mais facilmente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 250 entries, 0 to 249\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   ID                250 non-null    int64  \n",
+      " 1   Store             250 non-null    object \n",
+      " 2   CrustDescription  250 non-null    object \n",
+      " 3   Topping           250 non-null    object \n",
+      " 4   Diameter          250 non-null    float64\n",
+      "dtypes: float64(1), int64(1), object(3)\n",
+      "memory usage: 9.9+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data_pizza.info()) ########### FALAR DOS NON NULL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $III$. Será que a alegação da pizzaria EagleBoys tem alguma base?\n"
    ]
   },
   {
@@ -413,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -470,14 +520,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podemos notar que os _outliers_ superiores corroboram também com a afirmação da pizzara EagleBoys.\n",
+    "Podemos notar que mesmo os _outliers_ corroboram também com a afirmação da pizzara EagleBoys.\n",
     "\n",
     "Outra questão que podemos inferir com este _boxplot_ é que a pizzaria Dominos apresenta a maior variação no diâmetro das pizzas. A distância entre o quartil inferior e o quartil superior é maior em comparação com a pizzaria EagleBoys, e os 'bigodes' também são mais longos, indicando uma maior dispersão dos dados. Para provar isso, vejamos a célula abaixo:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +567,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $III$. Existe uma diferença significativa no diâmetro médio das pizzas entre as pizzarias EagleBoys e Dominos?\n"
+    "## $IV$. Existe uma diferença significativa no diâmetro médio das pizzas entre as pizzarias EagleBoys e Dominos?\n"
    ]
   },
   {
@@ -543,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +657,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $IV$. O tipo de massa ou o sabor impactam no tamanho da pizza?\n"
+    "## $V$. O tipo de massa ou o sabor impactam no tamanho da pizza?\n"
    ]
   },
   {
@@ -621,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +791,7 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(12, 8)) ########### FALAR DA MULTIMODA\n",
+    "plt.figure(figsize=(12, 8)) ########### FALAR DA MULTIMODADLIDADE\n",
     "for topping in data_pizza['Topping'].unique():\n",
     "    subset = data_pizza[data_pizza['Topping'] == topping]\n",
     "    sns.kdeplot(subset['Diameter'], label=topping, fill=True)\n",
@@ -754,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -786,21 +836,26 @@
    "source": [
     "Os gráficos de densidade resultantes mostram como os diâmetros das pizzas são distribuídos para cada tipo de massa e sabor. Cada curva representa a distribuição de diâmetros para um tipo específico de massa e sabor, permitindo comparar visualmente as distribuições entre os diferentes tipos de massa.\n",
     "\n",
-    "- **Picos das Curvas:** Indicam os diâmetros mais comuns para cada tipo de massa.\n",
+    "- **Picos das Curvas:** Indicam os diâmetros mais comuns para cada tipo de massa, ou moda.\n",
+    "\n",
     "- **Largura das Curvas:** Indica a variabilidade dos diâmetros para cada tipo de massa. Curvas mais largas sugerem maior variabilidade, enquanto curvas mais estreitas indicam menor variabilidade.\n",
-    "- **Áreas Preenchidas:** Facilitam a visualização das distribuições e ajudam a identificar rapidamente as diferenças entre os tipos de massa."
+    "\n",
+    "- **Áreas Preenchidas:** Facilitam a visualização das distribuições e ajudam a identificar rapidamente as diferenças entre os tipos de massa.\n",
+    "\n",
+    "Uma observação pertinente quanto aos Picos das Curvas: é que, para a mesma distribuição, podemos ver dois picos. Isso indica que a distribuição é multimodal, o que implica que provavelmente há um subconjunto na distribuição. No nosso caso, podemos dizer que o subconjunto em questão seria as pizzarias, já que cada uma tem sua própria moda.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Por último, os _boxplots_ seguintes permitem comparar a distribuição dos diâmetros das pizzas para diferentes combinações de tipo de massa e sabor."
+    "Por último, os _boxplots_ extras seguintes permitem comparar a distribuição dos diâmetros das pizzas para diferentes combinações de tipo de massa e sabor pela pizzaria que pertecem."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
