remoção das analises de estatistica inferencial(testes de hipóteses), dexando assim apenas estatistica descritiva

--- a/lab02.ipynb
+++ b/lab02.ipynb
@@ -14,11 +14,11 @@
    "source": [
     "**Alunos:**\n",
     "\n",
-    "João Victor Santos Brito Ferreira - 202207040028\n",
+    "- João Victor Santos Brito Ferreira - 202207040028\n",
     "\n",
-    "Kauan Miranda Tavares - 202206840033\n",
+    "- Kauan Miranda Tavares - 202206840033\n",
     "\n",
-    "Marco Antônio do Espírito Santo Maués Junior - 202206840038"
+    "- Marco Antônio do Espírito Santo Maués Junior - 202206840038"
    ]
   },
   {
