adição do lab03 com os mmesmos dados do 02 mas com análise inferencial

--- a/lab03.ipynb
+++ b/lab03.ipynb
@@ -542,7 +542,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Os resultados do teste de Mann-Whitney U indicam que há uma diferença significativa no diâmetro médio das pizzas entre as duas pizzarias, fato corroborado pelo plot das distribuições a seguir:"
+    "Os resultados do teste de `Mann-Whitney U` indicam que há uma diferença significativa no diâmetro médio das pizzas entre as duas pizzarias, fato corroborado pelo plot das distribuições a seguir:"
    ]
   },
   {
@@ -586,7 +586,7 @@
    "source": [
     "Para testar a afirmação, podemos utilizar o teste de hipóteses `ANOVA`. No entanto, antes de aplicá-lo, devemos verificar se os dados atendem a alguns requisitos para garantir que o teste seja apropriado.\n",
     "\n",
-    "Na célula abaixo, vamos realizar testes de normalidade e homogeneidade de variâncias para verificar se os dados atendem às suposições necessárias para a `ANOVA`.\n",
+    "Na célula abaixo, vamos realizar a **análise de resíduos** com testes de normalidade e homogeneidade de variâncias para verificar se os dados atendem às suposições necessárias para a `ANOVA`.\n",
     "\n",
     "As suposições são:\n",
     "\n",
@@ -656,7 +656,17 @@
     "\n",
     "Então, para testarmos essa questão, utilizamos o teste de `Kruskal-Wallis`, que é uma alternativa não paramétrica à `ANOVA` e é apropriado para dados que não seguem uma distribuição normal de reíduos e não são homossedásticos, que é o nosso caso.\n",
     "\n",
-    "Primeiro, aplicamos na célula abaixo o teste de `Kruskal-Wallis` para comparar os diâmetros das pizzas entre diferentes tipos de massa e sabores. Este teste verifica se há diferenças significativas nas medianas dos grupos comparados."
+    "Primeiro, aplicamos na célula abaixo o teste de `Kruskal-Wallis` para comparar os diâmetros das pizzas entre diferentes tipos de massa e sabores. Este teste verifica se há diferenças significativas nas medianas dos grupos comparados.\n",
+    "\n",
+    "#### Para Tipo de Massa\n",
+    "- **Hipótese Nula (H₀)**: As medianas dos diâmetros das pizzas são iguais para todos os tipos de massa.\n",
+    "- **Hipótese Alternativa (H₁)**: Pelo menos uma das medianas dos diâmetros das pizzas é diferente entre os tipos de massa.\n",
+    "\n",
+    "#### Para Sabor\n",
+    "- **Hipótese Nula (H₀)**: As medianas dos diâmetros das pizzas são iguais para todos os sabores.\n",
+    "- **Hipótese Alternativa (H₁)**: Pelo menos uma das medianas dos diâmetros das pizzas é diferente entre os sabores.\n",
+    "\n",
+    "\n"
    ]
   },
   {
